# libffx

./: .gitignore  .travis.yml  LICENSE  README.md  README_PYPI.md  aes-ffx-vectors.txt  benchmark.py  example.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py  unittests.py
.github/workflows/: publish.yml  tests.yml
FFX/: __init__.py
examples/: __init__.py  bank_account.py  credit_card.py  date_of_birth.py  email_encryption.py  ip_address.py  license_plate.py  medical_record.py  phone_number.py  ssn.py  username.py  zip_code.py
ffx/: __init__.py  encrypter.py  exceptions.py  integer.py  tests.py  utils.py
tests/: conftest.py  test_edge_cases.py  test_encryption.py  test_ffx.py  test_ffx_integer.py  test_official_vectors.py
