[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libffx"
version = "1.0.0"
description = "FFX - Format Preserving Encryption (NIST FFX-A2 mode of operation)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kevin P. Dyer", email = "kpdyer@gmail.com"}
]
maintainers = [
    {name = "Kevin P. Dyer", email = "kpdyer@gmail.com"}
]
keywords = ["cryptography", "encryption", "format-preserving", "ffx", "fpe", "aes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = [
    "gmpy2>=2.1.0",
    "pycryptodome>=3.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/kpdyer/libffx"
Repository = "https://github.com/kpdyer/libffx"
Issues = "https://github.com/kpdyer/libffx/issues"

[tool.setuptools.packages.find]
include = ["ffx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["ffx"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
